Change header title from 'NTN SHOE' to 'NTN SHOES'

--- a/user/html/index.html
+++ b/user/html/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="tile-header">
-        <h1>NTN SHOE</h1>
+        <h1>NTN SHOES</h1>
       </div>
       <nav
         class="navbar"
