Update title from 'NTN SHOE' to 'NTN SHOES'

--- a/user/html/giohang.html
+++ b/user/html/giohang.html
@@ -24,7 +24,7 @@
               <div class="panel-heading">
                 <header>
                   <div class="tile-header">
-                    <h1>NTN SHOE</h1>
+                    <h1>NTN SHOES</h1>
                   </div>
                   <nav
                     class="navbar"
